--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/* 
+  Project: EYE SIGHT AI
+  Author: Haseef Muhammed PC
+  Website: https://haseefmuhammed.netlify.app
+  License: Custom MIT-based — Personal and Educational Use Only
+
+*/
+
 body {
   background-color: #f8f9fa;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
